--- a/my-world/Dockerfile
+++ b/my-world/Dockerfile
@@ -1,6 +1,6 @@
 FROM scratch
 
-COPY kay /
+COPY . /
 #COPY /lib/x86_64-linux-gnu/libc.so.6 /lib/x86_64-linux-gnu/libc.so.6
 #COPY /lib64/ld-linux-x86-64.so.2 /lib64/ld-linux-x86-64.so.2
 
