--- a/.github/workflows/demo.yml
+++ b/.github/workflows/demo.yml
@@ -10,4 +10,6 @@ jobs:
       - run: echo "Hello World!"
       - uses: actions/checkout@v2
       - run: ls
+      - docker login -u wsukduncan -pass mysupersecret
       - run: echo "Goodbye!"
+      - with: secret: ${{ secrets.DOCKERHUB_USERNAME }}
