--- a/.github/workflows/demo.yml
+++ b/.github/workflows/demo.yml
@@ -17,3 +17,22 @@ jobs:
           SUPER_SECRET: ${{ secrets.DOCKERHUB_USERNAME }}
         run: |
           echo "$SUPER_SECRET"
+      -
+        name: Set up QEMU
+        uses: docker/setup-qemu-action@v2
+      -
+        name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v2
+      -
+        name: Login to Docker Hub
+        uses: docker/login-action@v2
+        with:
+          username: ${{ secrets.DOCKERHUB_USERNAME }}
+          password: ${{ secrets.DOCKER_HUB }}
+      -
+        name: Build and push
+        uses: docker/build-push-action@v4
+        with:
+          push: true
+          tags: wsukduncan/springcats:latest
+          
