--- a/.github/workflows/demo.yml
+++ b/.github/workflows/demo.yml
@@ -35,6 +35,7 @@ jobs:
         name: Build and push
         uses: docker/build-push-action@v4
         with:
+          context: .
           push: true
             #tags: wsukduncan/s23site:latest
           tags: ${{ steps.meta.outputs.tags }}
