--- a/.github/workflows/demo.yml
+++ b/.github/workflows/demo.yml
@@ -38,5 +38,7 @@ jobs:
           context: .
           push: true
             #tags: wsukduncan/s23site:latest
-          tags: ${{ steps.meta.outputs.tags }}
+          tags: |
+            ${{ steps.meta.outputs.tags }}
+            ${{ secrets.DOCKERHUB_USERNAME }}/s23site:latest
           labels: ${{ steps.meta.outputs.labels }}
